// LINT: LEGACY_NAMES
// clang-format off

// This file is generated automatically. Do not edit manually.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------

syntax = "proto2";

package grr;

import "grr_response_proto/export.proto";

// BytesValue proto mapping.
message AutoGeneratedExportedBytesValue1 {
  optional ExportedMetadata metadata = 1;
  optional bytes value = 2;
}

// ClientSnapshot proto mapping.
message AutoGeneratedExportedClientSnapshot1 {
  optional ExportedMetadata metadata = 1;
  optional string client_id = 2;
  optional string filesystems = 3;
  optional string os_release = 4;
  optional string os_version = 5;
  optional string arch = 6;
  optional uint64 install_time = 7;
  optional string knowledge_base_users = 8;
  optional string knowledge_base_fqdn = 9;
  optional string knowledge_base_time_zone = 10;
  optional string knowledge_base_os = 11;
  optional uint32 knowledge_base_os_major_version = 12;
  optional uint32 knowledge_base_os_minor_version = 13;
  optional string knowledge_base_environ_path = 14;
  optional string knowledge_base_environ_temp = 15;
  optional string knowledge_base_os_release = 16;
  optional string knowledge_base_environ_allusersappdata = 17;
  optional string knowledge_base_environ_allusersprofile = 18;
  optional string knowledge_base_environ_commonprogramfiles = 19;
  optional string knowledge_base_environ_commonprogramfilesx86 = 20;
  optional string knowledge_base_environ_comspec = 21;
  optional string knowledge_base_environ_driverdata = 22;
  optional string knowledge_base_environ_profilesdirectory = 23;
  optional string knowledge_base_environ_programfiles = 24;
  optional string knowledge_base_environ_programdata = 25;
  optional string knowledge_base_environ_programfilesx86 = 26;
  optional string knowledge_base_environ_systemdrive = 27;
  optional string knowledge_base_environ_systemroot = 28;
  optional string knowledge_base_environ_windir = 29;
  optional string knowledge_base_current_control_set = 30;
  optional string knowledge_base_code_page = 31;
  optional string knowledge_base_domain = 32;
  optional string knowledge_base_DEPRECATED_users = 33;
  optional string grr_configuration = 34;
  optional string library_versions = 35;
  optional string kernel = 36;
  optional string volumes = 37;
  optional string interfaces = 38;
  optional string hardware_info_serial_number = 39;
  optional string hardware_info_system_manufacturer = 40;
  optional string hardware_info_system_product_name = 41;
  optional string hardware_info_system_uuid = 42;
  optional string hardware_info_system_sku_number = 43;
  optional string hardware_info_system_family = 44;
  optional string hardware_info_bios_vendor = 45;
  optional string hardware_info_bios_version = 46;
  optional string hardware_info_bios_release_date = 47;
  optional string hardware_info_bios_rom_size = 48;
  optional string hardware_info_bios_revision = 49;
  optional string hardware_info_system_assettag = 50;
  optional uint64 memory_size = 51;
  optional string cloud_instance_cloud_type = 52;
  optional string cloud_instance_google_unique_id = 53;
  optional string cloud_instance_google_zone = 54;
  optional string cloud_instance_google_project_id = 55;
  optional string cloud_instance_google_instance_id = 56;
  optional string cloud_instance_google_hostname = 57;
  optional string cloud_instance_google_machine_type = 58;
  optional string cloud_instance_amazon_instance_id = 59;
  optional string cloud_instance_amazon_ami_id = 60;
  optional string cloud_instance_amazon_hostname = 61;
  optional string cloud_instance_amazon_public_hostname = 62;
  optional string cloud_instance_amazon_instance_type = 63;
  optional string startup_info_client_info_client_name = 64;
  optional uint32 startup_info_client_info_client_version = 65;
  optional uint64 startup_info_client_info_revision = 66;
  optional string startup_info_client_info_build_time = 67;
  optional string startup_info_client_info_client_binary_name = 68;
  optional string startup_info_client_info_client_description = 69;
  optional string startup_info_client_info_labels = 70;
  optional bool startup_info_client_info_timeline_btime_support = 71;
  optional bool startup_info_client_info_sandbox_support = 72;
  optional uint64 startup_info_boot_time = 73;
  optional bool startup_info_interrogate_requested = 74;
  optional uint64 startup_info_timestamp = 75;
  optional string edr_agents = 76;
  optional string fleetspeak_validation_info_tags = 77;
  optional string metadata_source_flow_id = 78;
  optional uint64 timestamp = 79;
}

// CollectBrowserHistoryResult proto mapping.
message AutoGeneratedExportedCollectBrowserHistoryResult1 {
  optional ExportedMetadata metadata = 1;
  optional string browser = 2;
  optional uint64 stat_entry_st_mode = 3;
  optional uint64 stat_entry_st_ino = 4;
  optional uint64 stat_entry_st_dev = 5;
  optional uint64 stat_entry_st_nlink = 6;
  optional uint32 stat_entry_st_uid = 7;
  optional uint32 stat_entry_st_gid = 8;
  optional uint64 stat_entry_st_size = 9;
  optional uint64 stat_entry_st_atime = 10;
  optional uint64 stat_entry_st_mtime = 11;
  optional uint64 stat_entry_st_ctime = 12;
  optional uint64 stat_entry_st_blocks = 13;
  optional uint64 stat_entry_st_blksize = 14;
  optional uint64 stat_entry_st_rdev = 15;
  optional uint32 stat_entry_st_flags_osx = 16;
  optional uint32 stat_entry_st_flags_linux = 17;
  optional string stat_entry_symlink = 18;
  optional string stat_entry_registry_type = 19;
  optional bytes stat_entry_resident = 20;
  optional string stat_entry_pathspec_pathtype = 21;
  optional string stat_entry_pathspec_path = 22;
  optional string stat_entry_pathspec_mount_point = 23;
  optional string stat_entry_pathspec_stream_name = 24;
  optional string stat_entry_pathspec_nested_path = 25;
  optional uint64 stat_entry_pathspec_offset = 26;
  optional string stat_entry_pathspec_path_options = 27;
  optional uint64 stat_entry_pathspec_recursion_depth = 28;
  optional uint64 stat_entry_pathspec_inode = 29;
  optional string stat_entry_pathspec_ntfs_type = 30;
  optional uint64 stat_entry_pathspec_ntfs_id = 31;
  optional uint64 stat_entry_pathspec_file_size_override = 32;
  optional bool stat_entry_pathspec_is_virtualroot = 33;
  optional string stat_entry_pathspec_implementation_type = 34;
  optional int64 stat_entry_registry_data_integer = 35;
  optional bytes stat_entry_registry_data_data = 36;
  optional string stat_entry_registry_data_string = 37;
  optional string stat_entry_registry_data_proto_name = 38;
  optional string stat_entry_registry_data_none = 39;
  optional bool stat_entry_registry_data_boolean = 40;
  optional string stat_entry_registry_data_list_content = 41;
  optional string stat_entry_registry_data_dict_dat = 42;
  optional string stat_entry_registry_data_rdf_value_name = 43;
  optional bytes stat_entry_registry_data_rdf_value_data = 44;
  optional float stat_entry_registry_data_float = 45;
  optional string stat_entry_registry_data_set_content = 46;
  optional string stat_entry_registry_data_compression = 47;
  optional uint64 stat_entry_st_btime = 48;
  optional string stat_entry_ext_attrs = 49;
}

// CollectCloudVMMetadataResult proto mapping.
message AutoGeneratedExportedCollectCloudVMMetadataResult1 {
  optional ExportedMetadata metadata = 1;
  optional string vm_metadata_cloud_type = 2;
  optional string vm_metadata_google_unique_id = 3;
  optional string vm_metadata_google_zone = 4;
  optional string vm_metadata_google_project_id = 5;
  optional string vm_metadata_google_instance_id = 6;
  optional string vm_metadata_google_hostname = 7;
  optional string vm_metadata_google_machine_type = 8;
  optional string vm_metadata_amazon_instance_id = 9;
  optional string vm_metadata_amazon_ami_id = 10;
  optional string vm_metadata_amazon_hostname = 11;
  optional string vm_metadata_amazon_public_hostname = 12;
  optional string vm_metadata_amazon_instance_type = 13;
}

// CollectDistroInfoResult proto mapping.
message AutoGeneratedExportedCollectDistroInfoResult1 {
  optional ExportedMetadata metadata = 1;
  optional string name = 2;
  optional string release = 3;
  optional uint32 version_major = 4;
  optional uint32 version_minor = 5;
}

// CollectLargeFileFlowResult proto mapping.
message AutoGeneratedExportedCollectLargeFileFlowResult1 {
  optional ExportedMetadata metadata = 1;
  optional string session_uri = 2;
  optional uint64 total_bytes_sent = 3;
}

// DummyFlowResult proto mapping.
message AutoGeneratedExportedDummyFlowResult1 {
  optional ExportedMetadata metadata = 1;
  optional string flow_output = 2;
}

// ExecuteBinaryResponse proto mapping.
message AutoGeneratedExportedExecuteBinaryResponse1 {
  optional ExportedMetadata metadata = 1;
  optional int32 exit_status = 2;
  optional bytes stdout = 3;
  optional bytes stderr = 4;
  optional int32 time_used = 5;
}

// ExecutePythonHackResult proto mapping.
message AutoGeneratedExportedExecutePythonHackResult1 {
  optional ExportedMetadata metadata = 1;
  optional string result_string = 2;
}

// GetCrowdstrikeAgentIdResult proto mapping.
message AutoGeneratedExportedGetCrowdstrikeAgentIdResult1 {
  optional ExportedMetadata metadata = 1;
  optional string agent_id = 2;
}

// GetMemorySizeResult proto mapping.
message AutoGeneratedExportedGetMemorySizeResult1 {
  optional ExportedMetadata metadata = 1;
  optional uint64 total_bytes = 2;
}

// HardwareInfo proto mapping.
message AutoGeneratedExportedHardwareInfo1 {
  optional ExportedMetadata metadata = 1;
  optional string serial_number = 2;
  optional string system_manufacturer = 3;
  optional string system_product_name = 4;
  optional string system_uuid = 5;
  optional string system_sku_number = 6;
  optional string system_family = 7;
  optional string bios_vendor = 8;
  optional string bios_version = 9;
  optional string bios_release_date = 10;
  optional string bios_rom_size = 11;
  optional string bios_revision = 12;
  optional string system_assettag = 13;
}

// KnowledgeBase proto mapping.
message AutoGeneratedExportedKnowledgeBase1 {
  optional ExportedMetadata metadata = 1;
  optional string users = 2;
  optional string fqdn = 3;
  optional string time_zone = 4;
  optional string os = 5;
  optional uint32 os_major_version = 6;
  optional uint32 os_minor_version = 7;
  optional string environ_path = 8;
  optional string environ_temp = 9;
  optional string os_release = 10;
  optional string environ_allusersappdata = 11;
  optional string environ_allusersprofile = 12;
  optional string environ_commonprogramfiles = 13;
  optional string environ_commonprogramfilesx86 = 14;
  optional string environ_comspec = 15;
  optional string environ_driverdata = 16;
  optional string environ_profilesdirectory = 17;
  optional string environ_programfiles = 18;
  optional string environ_programdata = 19;
  optional string environ_programfilesx86 = 20;
  optional string environ_systemdrive = 21;
  optional string environ_systemroot = 22;
  optional string environ_windir = 23;
  optional string current_control_set = 24;
  optional string code_page = 25;
  optional string domain = 26;
  optional string DEPRECATED_users = 27;
}

// ListContainersFlowResult proto mapping.
message AutoGeneratedExportedListContainersFlowResult1 {
  optional ExportedMetadata metadata = 1;
  optional string containers = 2;
}

// ListNamedPipesFlowResult proto mapping.
message AutoGeneratedExportedListNamedPipesFlowResult1 {
  optional ExportedMetadata metadata = 1;
  optional string pipe_name = 2;
  optional uint32 pipe_server_pid = 3;
  optional uint32 pipe_client_pid = 4;
  optional string pipe_client_computer_name = 5;
  optional string pipe_client_user_name = 6;
  optional uint32 pipe_flags = 7;
  optional uint32 pipe_cur_instance_count = 8;
  optional uint32 pipe_max_instance_count = 9;
  optional uint32 pipe_in_buffer_size = 10;
  optional uint32 pipe_out_buffer_size = 11;
  optional uint32 proc_pid = 12;
  optional uint32 proc_ppid = 13;
  optional string proc_name = 14;
  optional string proc_exe = 15;
  optional string proc_cmdline = 16;
  optional uint64 proc_ctime = 17;
  optional uint32 proc_real_uid = 18;
  optional uint32 proc_effective_uid = 19;
  optional uint32 proc_saved_uid = 20;
  optional uint32 proc_real_gid = 21;
  optional uint32 proc_effective_gid = 22;
  optional uint32 proc_saved_gid = 23;
  optional string proc_username = 24;
  optional string proc_terminal = 25;
  optional string proc_status = 26;
  optional int32 proc_nice = 27;
  optional string proc_cwd = 28;
  optional uint32 proc_num_threads = 29;
  optional float proc_user_cpu_time = 30;
  optional float proc_system_cpu_time = 31;
  optional uint64 proc_RSS_size = 32;
  optional uint64 proc_VMS_size = 33;
  optional float proc_memory_percent = 34;
  optional string proc_open_files = 35;
  optional string proc_connections = 36;
}

// NetworkConnection proto mapping.
message AutoGeneratedExportedNetworkConnection1 {
  optional ExportedMetadata metadata = 1;
  optional string family = 2;
  optional string type = 3;
  optional string local_address_ip = 4;
  optional int32 local_address_port = 5;
  optional string remote_address_ip = 6;
  optional int32 remote_address_port = 7;
  optional string state = 8;
  optional uint32 pid = 9;
  optional uint64 ctime = 10;
  optional string process_name = 11;
}

// OSXServiceInformation proto mapping.
message AutoGeneratedExportedOSXServiceInformation1 {
  optional ExportedMetadata metadata = 1;
  optional string label = 2;
  optional string program = 3;
  optional string args = 4;
  optional uint64 pid = 5;
  optional string sessiontype = 6;
  optional uint64 lastexitstatus = 7;
  optional uint64 timeout = 8;
  optional bool ondemand = 9;
  optional string machservice = 10;
  optional string perjobmachservice = 11;
  optional string socket = 12;
  optional string plist = 13;
}

// ReadLowLevelFlowResult proto mapping.
message AutoGeneratedExportedReadLowLevelFlowResult1 {
  optional ExportedMetadata metadata = 1;
  optional string path = 2;
}

// TimelineResult proto mapping.
message AutoGeneratedExportedTimelineResult1 {
  optional ExportedMetadata metadata = 1;
  optional string entry_batch_blob_ids = 2;
  optional uint64 entry_count = 3;
  optional string filesystem_type = 4;
}

// YaraProcessDumpResponse proto mapping.
message AutoGeneratedExportedYaraProcessDumpResponse1 {
  optional ExportedMetadata metadata = 1;
  optional string dumped_processes = 2;
  optional string errors = 3;
}

// YaraProcessScanMiss proto mapping.
message AutoGeneratedExportedYaraProcessScanMiss1 {
  optional ExportedMetadata metadata = 1;
  optional uint32 process_pid = 2;
  optional uint32 process_ppid = 3;
  optional string process_name = 4;
  optional string process_exe = 5;
  optional string process_cmdline = 6;
  optional uint64 process_ctime = 7;
  optional uint32 process_real_uid = 8;
  optional uint32 process_effective_uid = 9;
  optional uint32 process_saved_uid = 10;
  optional uint32 process_real_gid = 11;
  optional uint32 process_effective_gid = 12;
  optional uint32 process_saved_gid = 13;
  optional string process_username = 14;
  optional string process_terminal = 15;
  optional string process_status = 16;
  optional int32 process_nice = 17;
  optional string process_cwd = 18;
  optional uint32 process_num_threads = 19;
  optional float process_user_cpu_time = 20;
  optional float process_system_cpu_time = 21;
  optional uint64 process_RSS_size = 22;
  optional uint64 process_VMS_size = 23;
  optional float process_memory_percent = 24;
  optional string process_open_files = 25;
  optional string process_connections = 26;
  optional uint64 scan_time_us = 27;
}
