
// The following messages are used to start flows in GRR.

syntax = "proto2";

import "google/protobuf/any.proto";
import "grr_response_proto/jobs.proto";
import "grr_response_proto/semantic.proto";

package grr;

message OutputPluginDescriptor {
  optional string plugin_name = 1
      [(sem_type) = { description: "The name of the output plugin." }];

  optional bytes DEPRECATED_plugin_args = 2;

  optional google.protobuf.Any args = 3 [(sem_type) = {
    dynamic_type: "GetPluginArgsClass",
    description: "This is a helper field used by ApiCreateHuntHandler. It must "
                 "be an instance of the named plugin's args_type."
  }];
}

message OutputPluginState {
  optional OutputPluginDescriptor plugin_descriptor = 1;
  optional AttributedDict plugin_state = 2;
  optional string plugin_id = 3;
}

// Next id: 7
message OutputPluginBatchProcessingStatus {
  enum Status {
    SUCCESS = 0;  // Batch was successfully processed.
    ERROR = 1;    // Batch wasn't processed due to an error.
  }

  optional Status status = 1 [
    (sem_type) = {
      description: "Was this batch successfully processed or not?"
    },
    default = SUCCESS
  ];

  optional OutputPluginDescriptor plugin_descriptor = 6 [(sem_type) = {
    description: "Descriptor of the output plugin responsible for this result."
  }];

  optional string summary = 3
      [(sem_type) = { description: "Summary message." }];

  optional uint64 batch_index = 4
      [(sem_type) = { description: "Number of the batch being processed." }];

  optional uint64 batch_size = 5
      [(sem_type) = { description: "Size of the batch beting processed." }];
}

message EmailOutputPluginArgs {
  reserved 2;

  optional string email_address = 1 [(sem_type) = {
    type: "DomainEmailAddress",
    description: "The email address that messages will be sent to.",
  }];
}
